# seremi

./: README.md  example.py  example_metadata.json  pyproject.toml
docs/source/: conf.py  index.rst  seremi.rst
src/: EMIFile.py  SERFile.py
src/seremi/: EMIFile.py  SERFile.py  __init__.py
