[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seremi"
version = "0.0.2"
authors = [
  { name="Sam Foxman", email="sfoxman@caltech.edu" },
]
description = "Read SER & EMI microscope images and metadata."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy>=2",
]

[project.optional-dependencies]
docs = [
    "sphinx==8.1.3"
]

[project.urls]
Homepage = "https://github.com/theNelsonLab/seremi"
Issues = "https://github.com/theNelsonLab/seremi/issues"
